address Andrew's comments